# HexSpell

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  readme.md  rustfmt.toml
.github/workflows/: rust.yml
docs/: coverage.md  guide.md  layout.md
src/: errors.rs  field.rs  lib.rs  pe.rs  pe_errors.rs  pe_file.rs  pe_section.rs  reloc.rs  strings.rs  utils.rs  validation.rs  write.rs
src/elf/: archive.rs  dynamic.rs  group.rs  hash.rs  header.rs  link.rs  mod.rs  note.rs  program.rs  relocation.rs  section.rs  symbol.rs  unwind.rs  version.rs
src/macho/: bitcode.rs  dyld.rs  fat.rs  header.rs  load_command.rs  mod.rs  relocation.rs  section.rs  segment.rs  symbol.rs
src/pe/: arch_data.rs  bound.rs  certificate.rs  clr.rs  coff.rs  debug.rs  delay.rs  dos.rs  exception.rs  export.rs  header.rs  import.rs  layout.rs  linenum.rs  load_config.rs  mod.rs  relocation.rs  resource.rs  rich.rs  section.rs  section_reloc.rs  symbol.rs  tls.rs
tests/: cross_format.rs  elf.rs  general.rs  macho.rs  pe.rs  readme.md  tests.rs  tests.toml
tests/samples/: linux
tests/scripts/: generator.py
tests/source/: machO-OSX-x86-ls  sample1.c++  sample2.c  sample3.c  sample4.c
