[package]
name = "hexspell"
version = "0.0.1"
authors=["Mestre <namestre3@protonmail.com>"]
edition = "2021"
description = "A open source lib to parse executables in Rust"
license = "MIT"
repository = "https://github.com/M3str3/HexSpell"
readme = "README.md"
exclude = ["tests/*"]
keywords = ["binary", "executable", "parser", "PE", "ELF" ]
categories = ["development-tools", "parsing"]

[dev-dependencies]
toml = "0.8.12"
